--- a/pages/home.html
+++ b/pages/home.html
@@ -48,6 +48,7 @@
           <li><a href="/pages/about.html#about">About</a></li>
           <li><a href="/pages/historical-sales-eda.html#historical-sales-eda">Historical Sales EDA</a></li>
           <li><a href="/pages/home.html#home">Home</a></li>
+          <li><a href="/pages/top-female-chess-players-eda.html#top-female-chess-players-eda">Top Female Chess Players EDA</a></li>
 
         </ul>
       </nav>
