--- a/pages/about.html
+++ b/pages/about.html
@@ -47,7 +47,8 @@
         <ul class="list">
           <li><a href="/pages/about.html#about">About</a></li>
           <li><a href="/pages/historical-sales-eda.html#historical-sales-eda">Historical Sales EDA</a></li>
-          <li><a href="/pages/home.html#home">Home</a></li>
+          <li><a href="/pages/multiple-linear-regression.html#multiple-linear-regression">Multiple Linear Regression</a></li>
+          <li><a href="/pages/time-series-solar-power.html#time-series-solar-power">Time Series - Solar Power</a></li>
           <li><a href="/pages/top-female-chess-players-eda.html#top-female-chess-players-eda">Top Female Chess Players EDA</a></li>
 
         </ul>
@@ -68,11 +69,14 @@
     <h1 id="about">About</h1>
   </header>
   <div>
-<p>I've tried my hand at many things over the years:  </p>
+<p>Hello, my name is Marek Mikesell, and welcome to my site of data-science related works. I grew up in Grand Rapids, Michigan and enjoy every day of it along-side my family.</p>
+<p>My hobbies are reading, spending time outdoors (camping, hiking), games of all types, and just enjoying my time with my wife.</p>
+<p>My Past Endeavors:</p>
 <p>Japanese - I studied the language for seven years and lived in Japan for two.<br>
 Martial arts - I studied martial arts for seven years and competed a multitude of times.<br>
-Teaching<br>
-3D Digital Sculpting  </p>  </div>
+Teaching English as a Second Language to children and young 
+3D Digital Sculpting and Texturing.</p>
+<p>Any inquiries can be sent to marekmikesell@outlook.com.</p>  </div>
 </article>
 
     <footer>
