--- a/tags.html
+++ b/tags.html
@@ -48,7 +48,8 @@
         <ul class="list">
           <li><a href="/pages/about.html#about">About</a></li>
           <li><a href="/pages/historical-sales-eda.html#historical-sales-eda">Historical Sales EDA</a></li>
-          <li><a href="/pages/home.html#home">Home</a></li>
+          <li><a href="/pages/multiple-linear-regression.html#multiple-linear-regression">Multiple Linear Regression</a></li>
+          <li><a href="/pages/time-series-solar-power.html#time-series-solar-power">Time Series - Solar Power</a></li>
           <li><a href="/pages/top-female-chess-players-eda.html#top-female-chess-players-eda">Top Female Chess Players EDA</a></li>
 
         </ul>
