--- a/pages/power-bi-report.html
+++ b/pages/power-bi-report.html
@@ -30,8 +30,7 @@
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content=""/>
 
-  <title>147.Data &ndash;     Categories
-</title>
+  <title>147.Data &ndash; POWER BI REPORT</title>
 
 </head>
 <body>
@@ -67,13 +66,16 @@
 
 <article class="single">
   <header>
-    <h1>    Categories
-</h1>
+    
+    <h1 id="power-bi-report">POWER BI REPORT</h1>
   </header>
   <div>
-    <ul class="list">
-    </ul>
-  </div>
+<p>ServiceNow is a popular Customer Relationship Management and IT ticketing PaaS. This report was made in Power BI with the purpose of giving an overview of the service. The information in the report was collected October 2020.  </p>
+<iframe width="1200" height="747" src="https://app.powerbi.com/view?r=eyJrIjoiYjViZmExYzctZjk5Yi0 0ZTQ5LWJjYzUtZTg3OGYxOTIxMjdhIiwidCI6ImUzYWY5Njc0LTAyODYtNGRhYy1iNTdhLWYwZDEzYTMwMDRiMSIsImMiOjN9&pageName=ReportSection" frameborder="0" allowFullScreen="true"></iframe>
+
+<p><strong>Page 1</strong>: Information on the releases of ServiceNow, and the companies acquisitions that portend the direction they are headed.</p>
+<p><strong>Page 2</strong>: A breakdown of prebuilt apps that are available for use inside of the ServiceNow platform. It also include the languages that are used within ServiceNow, their uses, and salaries of developers and admins.  </p>
+<p><strong> Page 3</strong>: Location of ServiceNow Partners. ServiceNow partners help implement custom solutions for companies that are specific to their needs. This is a map that could be used to understand and visualize where competition may exist.</p>  </div>
 </article>
 
     <footer>
